hamburger menu / function is ready

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
             </header>
             <nav id="menu">
                 <div id="hamburgerMenu">
-                    <p id="hamburgerMenuBtn">Nyomd meg!</p>
+                    <div id="hamburgerMenuBtn">
+                        <div id="line-one" class="hamburger-line"></div>
+                        <div id="line-two" class="hamburger-line"></div>
+                        <div id="line-three" class="hamburger-line"></div>
+                    </div>
                 </div>
                 <ul id="menu-list" class="menu-list-visibility">
                     <li>Főoldal</li>
@@ -41,6 +45,12 @@
                     <li>Kontakt</li>
                 </ul>
             </nav>
+            <section id="main">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
+                numquam, necessitatibus repudiandae nobis deleniti provident
+                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
+                praesentium nostrum et hic excepturi.
+            </section>
         </div>
         <script src="app.js"></script>
     </body>
