small changes by Menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="wrapper">
             <header>
                 <div class="head"></div>
-                <h1>Magyarok Ausztriában</h1>
+                <h1>Magyarokausztriában.at</h1>
             </header>
             <nav id="menu">
                 <div id="hamburgerMenu">
@@ -39,10 +39,10 @@
                     </div>
                 </div>
                 <ul id="menu-list" class="menu-list-visibility">
-                    <li>Főoldal</li>
-                    <li>Tartományok</li>
-                    <li>S.O.S.</li>
-                    <li>Kontakt</li>
+                    <li><a href="#">Főoldal</a></li>
+                    <li><a href="#">Tartományok</a></li>
+                    <li><a href="#">S.O.S.</a></li>
+                    <li><a href="#">Kontakt</a></li>
                 </ul>
             </nav>
             <section id="main">
