provinz list are almost ready

--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@
                 </div>
                 <ul id="menu-list" class="menu-list-visibility">
                     <li><a href="#">Főoldal</a></li>
-                    <li><a href="#">Tartományok</a></li>
+                    <li>
+                        <a id="provinz" href="#">Tartományok</a>
+                        <ul class="provinz-list">
+                            <li><a href="#">Burgerland</a></li>
+                            <li>Kärnten</li>
+                            <li>Niederösterreich</li>
+                            <li>Oberösterreich</li>
+                            <li>Salzburg</li>
+                            <li>Steiermark</li>
+                            <li>Tirol</li>
+                            <li>Vorarlberg</li>
+                            <li>Wien</li>
+                        </ul>
+                    </li>
                     <li><a href="#">S.O.S.</a></li>
                     <li><a href="#">Kontakt</a></li>
                 </ul>
