--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script
             type="text/javascript"
-            src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            src="https://code.jquery.com/jquery-3.3.1.js"
         ></script>
         <meta name="author" content="David Lippai" />
         <link rel="stylesheet" href="css/style.css" />
