--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     saepe facere quam molestiae aut doloremque delectus
                     reprehenderit! Perferendis ratione dignissimos dicta sint
                     cupiditate quas expedita ad excepturi dolore ea?</p>
-                    <div  id="second-paragraph">
+                    <div  class="second-paragraph">
                 <h2>Országos hírek</h2>
                     <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
                         numquam, necessitatibus repudiandae nobis deleniti provident
@@ -99,6 +99,17 @@
                         ratione dignissimos dicta sint cupiditate quas expedita ad
 </p>
                     </div>
+                    <div  class="second-paragraph">
+                        <h2>Országos hírek</h2>
+                            <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
+                                numquam, necessitatibus repudiandae nobis deleniti provident
+                                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
+                                praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Porro ut saepe facere quam
+                                molestiae aut doloremque delectus reprehenderit! Perferendis
+                                ratione dignissimos dicta sint cupiditate quas expedita ad
+        </p>
+                            </div>
                 <h2>Országos hírek</h2>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
                 numquam, necessitatibus repudiandae nobis deleniti provident
