--- a/index.html
+++ b/index.html
@@ -135,13 +135,11 @@
             </aside>
             <footer>
                 <div id="contact-box">
-                <h4>Business Contact</h4>
-                <p id="email-adress">info@magyarokausztriaban.at</p>
+                    <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
             </div>
-                <a href="#adress"><div id="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
+                <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
                 <div id="contact-box">
-                    <h4>Contact</h4>
-                    <p id="telefon">+43 660 73 555 68</p>
+                    <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-envelope"></i></div></a>
             </footer>
         </div>
         <script src="app.js"></script>
