--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -16,6 +16,7 @@
         <meta name="author" content="David Lippai" />
         <meta name="keywords" content="Magyarok ausztriában külföldi magyarok ausztriai magyarok külföldi munka munka ausztriában">
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
@@ -51,10 +52,10 @@
                         <div id="line-three" class="hamburger-line"></div>
                     </div>
                 </div>
-                <h2 id="aktiv-page-name">Home</h2>
+                <h2 id="aktiv-page-name">Kapcsolat</h2>
             </div>
                 <ul id="menu-list" class="menu-list-visibility">
-                    <li><a href="#">Főoldal</a></li>
+                    <li><a href="index.html">Főoldal</a></li>
                     <li>
                         <a id="provinz" href="#">Tartományok</a>
                         <ul class="provinz-list">
@@ -80,63 +81,15 @@
                     <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
-            <section id="main">
-                <h2>Országos hírek</h2>
-                <p id="first-paragraph">                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                    numquam, necessitatibus repudiandae nobis deleniti provident
-                    possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                    praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Porro ut saepe facere quam
-                    molestiae aut doloremque delectus reprehenderit! Perferendis
-                    ratione dignissimos dicta sint cupiditate quas expedita ad
-                    excepturi dolore ea? Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sint numquam, necessitatibus repudiandae nobis
-                    deleniti provident possimus odit aut aperiam iusto omnis harum
-                    vero adipisci nemo praesentium nostrum et hic excepturi. Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Porro ut
-                    saepe facere quam molestiae aut doloremque delectus
-                    reprehenderit! Perferendis ratione dignissimos dicta sint
-                    cupiditate quas expedita ad excepturi dolore ea?</p>
-                    <div  class="second-paragraph">
-                <h2>Országos hírek</h2>
-                    <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                        numquam, necessitatibus repudiandae nobis deleniti provident
-                        possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                        praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Porro ut saepe facere quam
-                        molestiae aut doloremque delectus reprehenderit! Perferendis
-                        ratione dignissimos dicta sint cupiditate quas expedita ad
-</p>
-                    </div>
-                    <div  class="second-paragraph">
-                        <h2>Országos hírek</h2>
-                            <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                                numquam, necessitatibus repudiandae nobis deleniti provident
-                                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                                praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Porro ut saepe facere quam
-                                molestiae aut doloremque delectus reprehenderit! Perferendis
-                                ratione dignissimos dicta sint cupiditate quas expedita ad
-        </p>
-                            </div>
-                <h2>Országos hírek</h2>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                numquam, necessitatibus repudiandae nobis deleniti provident
-                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Porro ut saepe facere quam
-                molestiae aut doloremque delectus reprehenderit! Perferendis
-                ratione dignissimos dicta sint cupiditate quas expedita ad
-                excepturi dolore ea? Lorem ipsum dolor sit amet consectetur,
-                adipisicing elit. Sint numquam, necessitatibus repudiandae nobis
-                deleniti provident possimus odit aut aperiam iusto omnis harum
-                vero adipisci nemo praesentium nostrum et hic excepturi. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Porro ut
-                saepe facere quam molestiae aut doloremque delectus
-                reprehenderit! Perferendis ratione dignissimos dicta sint
-                cupiditate quas expedita ad excepturi dolore ea?
 
-            </section>
+                <p id="first-paragraph" class="first-p">
+                     Kérjük <em>hirdetés</em>, <em>kiemelt hirdetés</em>,
+                      vagy bármi más jellegű kérdése miatt, keresse fel ügyfélszolgálatunkat az <strong>info@magyarokausztriaban.at</strong> email címen.
+                </p>
+                <p id="second-p-contact" class="first-p">
+                    Please because of <em>advertising</em>, or because of any other questions, do not hesitate to contact us : info@magyarokausztriaban.at
+               </p>
+
             <aside id="social-media">
                 <a href="#"><i class="fab fa-2x fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-2x fa-instagram"></i></i></a>
@@ -144,7 +97,7 @@
             </aside>
             <footer>
                 <div id="contact-box">
-                    <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
+                    <a href="index.html"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
             </div>
                 <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
                 <div id="contact-box">
