--- a/munka.html
+++ b/munka.html
@@ -16,6 +16,7 @@
         <meta name="author" content="David Lippai" />
         <meta name="keywords" content="Magyarok ausztriában külföldi magyarok ausztriai magyarok külföldi munka munka ausztriában">
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/jobs.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
@@ -51,10 +52,10 @@
                         <div id="line-three" class="hamburger-line"></div>
                     </div>
                 </div>
-                <h2 id="aktiv-page-name">Home</h2>
+                <h2 id="aktiv-page-name">Munka</h2>
             </div>
                 <ul id="menu-list" class="menu-list-visibility">
-                    <li><a href="#">Főoldal</a></li>
+                    <li><a href="index.html">Főoldal</a></li>
                     <li>
                         <a id="provinz" href="#">Tartományok</a>
                         <ul class="provinz-list">
@@ -76,67 +77,30 @@
                         <li>Tűzoltók | Feuerwehr <a href="tel:122"><i class="fas fa-phone"></i></a></li>
                     </ul>
                     </li>
-                    <li><a href="munka.html">Munka</a></li>
+                    <li><a href="#">Munka</a></li>
                     <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
-            <section id="main">
-                <h2>Országos hírek</h2>
-                <p id="first-paragraph">                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                    numquam, necessitatibus repudiandae nobis deleniti provident
-                    possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                    praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Porro ut saepe facere quam
-                    molestiae aut doloremque delectus reprehenderit! Perferendis
-                    ratione dignissimos dicta sint cupiditate quas expedita ad
-                    excepturi dolore ea? Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sint numquam, necessitatibus repudiandae nobis
-                    deleniti provident possimus odit aut aperiam iusto omnis harum
-                    vero adipisci nemo praesentium nostrum et hic excepturi. Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Porro ut
-                    saepe facere quam molestiae aut doloremque delectus
-                    reprehenderit! Perferendis ratione dignissimos dicta sint
-                    cupiditate quas expedita ad excepturi dolore ea?</p>
-                    <div  class="second-paragraph">
-                <h2>Országos hírek</h2>
-                    <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                        numquam, necessitatibus repudiandae nobis deleniti provident
-                        possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                        praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Porro ut saepe facere quam
-                        molestiae aut doloremque delectus reprehenderit! Perferendis
-                        ratione dignissimos dicta sint cupiditate quas expedita ad
-</p>
-                    </div>
-                    <div  class="second-paragraph">
-                        <h2>Országos hírek</h2>
-                            <p>  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                                numquam, necessitatibus repudiandae nobis deleniti provident
-                                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                                praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Porro ut saepe facere quam
-                                molestiae aut doloremque delectus reprehenderit! Perferendis
-                                ratione dignissimos dicta sint cupiditate quas expedita ad
-        </p>
-                            </div>
-                <h2>Országos hírek</h2>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                numquam, necessitatibus repudiandae nobis deleniti provident
-                possimus odit aut aperiam iusto omnis harum vero adipisci nemo
-                praesentium nostrum et hic excepturi. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Porro ut saepe facere quam
-                molestiae aut doloremque delectus reprehenderit! Perferendis
-                ratione dignissimos dicta sint cupiditate quas expedita ad
-                excepturi dolore ea? Lorem ipsum dolor sit amet consectetur,
-                adipisicing elit. Sint numquam, necessitatibus repudiandae nobis
-                deleniti provident possimus odit aut aperiam iusto omnis harum
-                vero adipisci nemo praesentium nostrum et hic excepturi. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Porro ut
-                saepe facere quam molestiae aut doloremque delectus
-                reprehenderit! Perferendis ratione dignissimos dicta sint
-                cupiditate quas expedita ad excepturi dolore ea?
+            <section>
+            <h2>Legismertebb állás portálok: </h2>
+                <a href="https://www.ams.at/"><p  class="first-p">
+                     www.ams.at
+                </p></a>
+                <a href="https://www.jobs.at/"><p class="first-p">
+                   www.jobs.at
+               </p></a>
+               <a href="https://at.jobrapido.com/"><p class="first-p">
+                at.jobrapido.com
+           </p></a>
+               <a href="https://www.stepstone.at/"><p  class="first-p">
+                www.stepstone.at
+           </p></a>
+               <p class="second-p" id="last-p-jobs">
+                 Kérjük, ha tartományokra lebontva szeretne munkát keresni,
+                  kattintson a "Tartományok" menü pontra és válassza ki a listából az Önnek megfelelőt.
 
-            </section>
+               </p>
+              </section>
             <aside id="social-media">
                 <a href="#"><i class="fab fa-2x fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-2x fa-instagram"></i></i></a>
@@ -144,9 +108,9 @@
             </aside>
             <footer>
                 <div id="contact-box">
-                    <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
+                    <a href="index.html"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
             </div>
-                <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
+                <a href="index.html"><div class="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
                 <div id="contact-box">
                     <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-envelope"></i></div></a>
             </footer>
