--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <li><a href="#">Oberösterreich</a></li>
                             <li><a href="#">Salzburg</a></li>
                             <li><a href="#">Steiermark</a></li>
-                            <li><a href="#">Tirol</a></li>
+                            <li><a href="tirol.html">Tirol</a></li>
                             <li><a href="#">Vorarlberg</a></li>
                             <li><a href="#">Wien</a></li>
                         </ul>
