mobil version is ready

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                     <li>
                         <a id="provinz" href="#">Tartományok</a>
                         <ul class="provinz-list">
-                            <li><a href="#">Burgerland</a></li>
-                            <li><a href="#">Kärnten</a></li>
-                            <li><a href="#">Niederösterreich</a></li>
-                            <li><a href="#">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="burgerland.html">Burgerland</a></li>
+                            <li><a href="karnten.html">Kärnten</a></li>
+                            <li><a href="niederosterreich.html">Niederösterreich</a></li>
+                            <li><a href="oberosterreich.html">Oberösterreich</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
                             <li><a href="tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">S.O.S.</a>
@@ -144,7 +144,7 @@
             </aside>
             <footer>
                 <div id="contact-box">
-                    <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
+                    <a href="javascript:history.back()"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
             </div>
                 <a href="#adress"><div class="house-icon"><i class="fas fa-2x fa-home"></i></div></a>
                 <div id="contact-box">
